--- a/index.html
+++ b/index.html
@@ -1,15 +1,79 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Casino</title>
-  <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="styles.14906a761ef62889895e.css"></head>
+<head>
+    <meta charset="utf-8">
+    <title>Casino</title>
+    <base href="/">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <style>
+        .whg-loader.-main {
+            display: flex;
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            align-items: center;
+            justify-content: center;
+            background-color: #fff;
+        }
+
+        .whg-loader.-main .whg-loader__content {
+            display: inline-block;
+            position: relative;
+            width: 80px;
+            height: 80px;
+        }
+
+        .whg-loader.-main .whg-loader__content div {
+            display: inline-block;
+            position: absolute;
+            left: 8px;
+            width: 16px;
+            background: #8DC63F;
+            animation: main 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+        }
+
+        .whg-loader.-main .whg-loader__content div:nth-child(1) {
+            left: 8px;
+            animation-delay: -0.24s;
+        }
+
+        .whg-loader.-main .whg-loader__content div:nth-child(2) {
+            left: 32px;
+            animation-delay: -0.12s;
+        }
+
+        .whg-loader.-main .whg-loader__content div:nth-child(3) {
+            left: 56px;
+            animation-delay: 0;
+        }
+
+        @keyframes main {
+            0% {
+                top: 8px;
+                height: 64px;
+            }
+
+            50%,
+            100% {
+                top: 24px;
+                height: 32px;
+            }
+        }
+    </style>
+<link rel="stylesheet" href="styles.1920bd2b5a160ce98bf4.css"></head>
+
 <body>
-  <whg-root></whg-root>
-<script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="es2015-polyfills.b0657154bc33c6ff11ae.js" nomodule></script><script type="text/javascript" src="polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="main.7d7326c9095d0a274753.js"></script></body>
+    <whg-root>
+        <div class="whg-loader -main">
+            <div class="whg-loader__content"><div></div><div></div><div></div></div>
+        </div>
+    </whg-root>
+<script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="es2015-polyfills.b0657154bc33c6ff11ae.js" nomodule></script><script type="text/javascript" src="polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="main.5b675e246037554cf96b.js"></script></body>
+
 </html>
